force-app/main/default/objects/Co_Branded_Collateral__c/Co_Branded_Collateral__c.object-meta.xml
<CustomObject>
    <label>Co-Branded Collateral Request</label>
    <nameField>
        <displayFormat>CBC-{0000}</displayFormat>
        <label>Co-Branded Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Branded Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>