force-app/main/default/objects/Co_Branded_Collateral__c/fields/Final_dimensions_you_need__c.field-meta.xml
<CustomField>
    <fullName>Final_dimensions_you_need__c</fullName>
    <inlineHelpText>What are the final dimensions you need? Please be specific</inlineHelpText>
    <label>Final dimensions you need</label>
    <length>255</length>
    <type>Text</type>
</CustomField>