force-app/main/default/objects/Co_Branded_Collateral__c/fields/Partner_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email_Address__c</fullName>
    <formula>Partner_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Email Address</label>
    <type>Text</type>
</CustomField>