force-app/main/default/objects/Co_Branded_Collateral__c/fields/What_is_your_deadline__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_deadline__c</fullName>
    <label>What is your deadline?</label>
    <type>Date</type>
</CustomField>